# find_relatives

./: README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 3cbc91b34eb5_.py  4d66bddf91c2_.py  70fb34afc4ea_initial.py  88f0be03b241_.py  9daf0ba6d882_.py  baab3efe5dd2_.py
scr/: main.py  models.py
scr/auth/: router.py  shemas.py
scr/pages/: router.py
scr/relatives/: router.py  shemas.py
scr/static/: auth.js  index.css  main.css  main.js  new_relative.js  register.js  sendRequest.js
scr/tasks/: tasks.py
scr/tasks/register_active/: tasks.py
scr/templates/: auth.html  auth_email.html  base.html  main_window.html  new_relative.html  register.html
scr/users/: router.py  shemas.py
