[tool.poetry]
name = "find-relatives"
version = "0.0.1"
description = ""
authors = ["Eugene-Manjaro <eugene.dyachkov27@gmail.com>"]
readme = "README.md"
packages = [{include = "find_relatives"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.1"}
sqlalchemy = "^2.0.9"
alembic = "^1.10.3"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
