[tool.poetry]
name = "find-relatives"
version = "0.0.1"
description = ""
authors = ["Eugene-Manjaro <eugene.dyachkov27@gmail.com>"]
readme = "README.md"
packages = [{include = "find_relatives"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.1"}
sqlalchemy = "^2.0.9"
alembic = "^1.10.3"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
asyncpg = "^0.27.0"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
celery = "^5.2.7"
flower = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
